Restructure tests into a flatter structure, separate test from visualizations.